Hide overflow x on html to fix bug with contact links transition from right

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ a {
   @apply text-sm md:text-base lg:text-lg xl:text-xl 2xl:text-2xl;
 }
 
+html,
 body {
   @apply overflow-x-hidden
 }
